1. Retina white logo added in whole project 2. Brand Campaign: on/off switch added in responsive design

--- a/app/views/shared/_guideline_modal.html.erb
+++ b/app/views/shared/_guideline_modal.html.erb
@@ -3,7 +3,7 @@
     <div class="modal-dialog add-fb-modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <a href="#"><%= image_tag('logo_white.png', :class => 'img-responsive login-modal-logo', :alt => 'logo') %></a>
+          <a href="#"><%= image_tag('logo_white.svg', :class => 'img-responsive login-modal-logo', :alt => 'logo') %></a>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body">
