--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -378,6 +378,23 @@ only screen and (max-width: 560px) {
         width: auto;
     }
 
+    .brand_campaign_performance_table > tbody > tr > td{
+        border: none;
+    }
+
+    .brand_campaign_performance_table > tbody > tr > td:nth-child(-n+2){
+        display: inline;
+    }
+
+    .brand_campaign_performance_table > tbody > tr > td:nth-child(1){
+        padding-right: 10px;
+        vertical-align: text-bottom;
+    }
+
+    .brand_campaign_performance_table .onoffswitch {
+        margin-top: 8px;
+    }
+
     .btn-age {
         font-size: 10px;
         margin: 10px 3px 3px 5px;
@@ -402,24 +419,19 @@ only screen and (max-width: 560px) {
     .performance_table > tbody > tr > td:nth-of-type(2):before { content: "Campaign Name : "; font-weight: bold; }
     .performance_table > tbody > tr > td:nth-of-type(3):before { content: "Post Likes : ";  font-weight: bold; }
     .performance_table > tbody > tr > td:nth-of-type(4):before { content: "Reach : ";  font-weight: bold; }
-    .performance_table > tbody > tr > td:nth-of-type(5):before { content: "Starts: ";  font-weight: bold; }
-    .performance_table > tbody > tr > td:nth-of-type(6):before { content: "Ends: ";  font-weight: bold; }
+    .performance_table > tbody > tr > td:nth-of-type(5):before { content: "Starts : ";  font-weight: bold; }
+    .performance_table > tbody > tr > td:nth-of-type(6):before { content: "Ends : ";  font-weight: bold; }
 
     .engagement_table > tbody > tr > td:nth-of-type(2):before { content: "Campaign Name : "; font-weight: bold; }
     .engagement_table > tbody > tr > td:nth-of-type(3):before { content: "Likes : ";  font-weight: bold; }
     .engagement_table > tbody > tr > td:nth-of-type(4):before { content: "Comments : ";  font-weight: bold; }
-    .engagement_table > tbody > tr > td:nth-of-type(5):before { content: "Shares: ";  font-weight: bold; }
+    .engagement_table > tbody > tr > td:nth-of-type(5):before { content: "Shares : ";  font-weight: bold; }
 
-    .brand_campaign_performance_table > tbody > tr > td:nth-of-type(2):before { content: "Campaign Name : "; font-weight: bold; }
-    .brand_campaign_performance_table > tbody > tr > td:nth-of-type(3):before { content: "Post Likes : ";  font-weight: bold; }
-    .brand_campaign_performance_table > tbody > tr > td:nth-of-type(4):before { content: "Reach : ";  font-weight: bold; }
-    .brand_campaign_performance_table > tbody > tr > td:nth-of-type(5):before { content: "Comments : ";  font-weight: bold; }
-    .brand_campaign_performance_table > tbody > tr > td:nth-of-type(6):before { content: "Shares: ";  font-weight: bold; }
-
-    /*.brand_campaign_engagement_table > tbody > tr > td:nth-of-type(1):before { content: "Campaign Name : "; font-weight: bold; }*/
-    /*.brand_campaign_engagement_table > tbody > tr > td:nth-of-type(2):before { content: "Likes : ";  font-weight: bold; }*/
-    /*.brand_campaign_engagement_table > tbody > tr > td:nth-of-type(3):before { content: "Comments : ";  font-weight: bold; }*/
-    /*.brand_campaign_engagement_table > tbody > tr > td:nth-of-type(4):before { content: "Shares: ";  font-weight: bold; }*/
+    .brand_campaign_performance_table > tbody > tr > td:nth-of-type(3):before { content: "Campaign Name : "; font-weight: bold; }
+    .brand_campaign_performance_table > tbody > tr > td:nth-of-type(4):before { content: "Post Likes : ";  font-weight: bold; }
+    .brand_campaign_performance_table > tbody > tr > td:nth-of-type(5):before { content: "Reach : ";  font-weight: bold; }
+    .brand_campaign_performance_table > tbody > tr > td:nth-of-type(6):before { content: "Comments : ";  font-weight: bold; }
+    .brand_campaign_performance_table > tbody > tr > td:nth-of-type(7):before { content: "Shares : ";  font-weight: bold; }
 
     .statistic-table > tbody > tr > td:nth-of-type(1):before { content: "Country/City : "; font-weight: bold; }
     .statistic-table > tbody > tr > td:nth-of-type(2):before { content: "Likes : ";  font-weight: bold; }
