--- a/app/views/bank_accounts/_add_bank_account.html.erb
+++ b/app/views/bank_accounts/_add_bank_account.html.erb
@@ -6,7 +6,7 @@
     <div class="modal-content">
 
       <div class="modal-header withdraw-modal-header">
-        <a href="#"><%= image_tag('logo_white.png', :class => 'img-responsive withdraw-modal-logo') %></a>
+        <a href="#"><%= image_tag('logo_white.svg', :class => 'img-responsive withdraw-modal-logo') %></a>
         <button type="button" class="close withdraw-modal-close" data-dismiss="modal">&times; </button>
       </div>
 
