--- a/app/views/shared/_add_account_modal.html.erb
+++ b/app/views/shared/_add_account_modal.html.erb
@@ -4,7 +4,7 @@
     <!-- Modal content-->
     <div class="modal-content account-modal-content">
       <div class="modal-header account-modal-header">
-        <a href="#"><%= image_tag('logo_white.png', :class => 'img-responsive login-modal-logo', :alt => "logo") %></a>
+        <a href="#"><%= image_tag('logo_white.svg', :class => 'img-responsive login-modal-logo', :alt => "logo") %></a>
         <button type="button" class="close account-modal-close" data-dismiss="modal">&times; </button>
       </div>
       <div class="modal-body account-modal-body">
