--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -185,7 +185,7 @@
 
       <div class="row">
         <div class="col-md-3 col-sm-3 col-xs-12">
-          <a href="<%= home_path %>"><%= image_tag('Logo.png', :class => 'image img-responsive header-logo', :alt => 'Logo') %></a>
+          <a href="<%= home_path %>"><%= image_tag('Logo.svg', :class => 'image img-responsive header-logo', :alt => 'Logo') %></a>
         </div>
         <div class="col-md-9 col-sm-9 col-xs-12 search-top-margin">
           <!-- search form -->
