--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -143,14 +143,14 @@
                 </div>
               </div>
 
-              <div class="form-group">
+              <div class="form-group remove-campaign-div">
                 <%= f.label :name, 'Description', class: 'control-label description-label' %>
                 <div class="display-inline campaign-name-input">
                   <%= f.text_area :text, rows: 4, class: 'campaign-description' %>
                 </div>
               </div>
 
-              <div class="form-group">
+              <div class="form-group remove-campaign-div">
                 <%= f.label :name, 'Headline', class: 'control-label' %>
                 <div class="display-inline campaign-name-input">
                   <%= f.text_field :headline, class: 'form-control' %>
@@ -344,6 +344,7 @@
         function showStartEndTime(){
             $('.start_time').show();
             $('.end_time').show();
+            $('.remove-campaign-div').hide();
 
         }
 
@@ -351,6 +352,7 @@
         function hideStartEndTime(){
             $('.start_time').hide();
             $('.end_time').hide();
+            $('.remove-campaign-div').show();
 
         }
 
