- Up and Down arrow changed in most of places in project

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1905,3 +1905,11 @@ div.modal-content{
 
 }
 
+.double-arrow-select-icon {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: url(up-down.png) no-repeat 98.5% center;
+  border-radius: 0;
+  background-size: 12px 12px;
+}
