--- a/app/views/facebook/insights.html.erb
+++ b/app/views/facebook/insights.html.erb
@@ -12,7 +12,7 @@
   <div class="row campaign-view">
     <%= form_tag(nil, method: 'get') do %>
         <%= label_tag :name, 'Choose an account' %>
-        <%= select_tag 'id', options_from_collection_for_select(@accounts, 'id', 'name', @account.id), prompt: 'Choose an account to view the statistics' %>
+        <%= select_tag 'id', options_from_collection_for_select(@accounts, 'id', 'name', @account.id), prompt: 'Choose an account to view the statistics', class: 'double-arrow-select-icon' %>
         <%= button_tag 'VIEW', class: 'btn-fb-insight-camp-show' %>
     <% end %>
   </div>
