--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -79,7 +79,7 @@
               </div>
               <div class="col-md-12">
                 <%= f.label :country %>
-                <%= f.country_select :country, {priority: %w(IN)}, {:class => 'profile-dropdown-color country-responsive-font'}, {} %>
+                <%= f.country_select :country, {priority: %w(IN)}, {:class => 'profile-dropdown-color country-responsive-font double-arrow-select-icon'}, {} %>
               </div>
               <div class="col-md-12">
                 <%= f.label :state %>
