--- a/app/views/explores/show.html.erb
+++ b/app/views/explores/show.html.erb
@@ -66,7 +66,7 @@
 
   <hr/>
   <div id="search-result-container">
-    <%= render 'explores/explores', {influencers: @influencers} %>
+    <%= render 'explores/explores', {accounts: @accounts} %>
   </div>
 
   <div id="profile-modal"></div>
