- Logo changed into Png format

--- a/app/views/campaigns/_add_social_activity_modal.html.erb
+++ b/app/views/campaigns/_add_social_activity_modal.html.erb
@@ -3,7 +3,7 @@
       <div class="modal-dialog fb-activity-modal-dialog">
         <div class="modal-content fb-activity-modal-content">
           <div class="modal-header profile-image-modal-header set-facebook-activity">
-            <a href="#"><%= image_tag('Logo.png', :class => 'img-responsive login-modal-logo', :alt => 'logo') %></a>
+            <a href="#"><%= image_tag('Logo.png', :class => 'img-responsive login-modal-logo logo-size', :alt => 'logo') %></a>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
           </div>
           <div class="modal-body">
