--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1909,7 +1909,12 @@ div.modal-content{
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  background: url(up-down.png) no-repeat 98.5% center;
+  background: image-url("up-down.png") no-repeat 98.5% center;
   border-radius: 0;
   background-size: 12px 12px;
+}
+
+.logo-size {
+  width: 136px;
+  height: 38px;
 }
