--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -41,14 +41,14 @@
               <div class="form-group">
                 <%= f.label :facebook_account_id, 'Choose Social Account Name', class: 'control-label' %>
                 <div class="display-inline">
-                  <%= f.select :facebook_account_id, options_for_select(@influencer.active_facebook_accounts.map{ |account| [account.name, account.id] }, @campaign.facebook_account_id), {}, { :class => 'form-control type-of-post', :id => 'social_account' } %>
+                  <%= f.select :facebook_account_id, options_for_select(@influencer.active_facebook_accounts.map{ |account| [account.name, account.id] }, @campaign.facebook_account_id), {}, { :class => 'form-control type-of-post double-arrow-select-icon', :id => 'social_account' } %>
                 </div>
               </div>
 
               <div class="form-group">
                 <%= f.label :post_type, 'Choose the type of post', class: 'control-label' %>
                 <div class="display-inline">
-                  <%= f.select :post_type, options_for_select(Campaign.post_types.map{ |type, value| [type.titleize, value] }, Campaign.post_types[@campaign.post_type]), {}, { :class => 'form-control type-of-post', :id => 'post_type' } %>
+                  <%= f.select :post_type, options_for_select(Campaign.post_types.map{ |type, value| [type.titleize, value] }, Campaign.post_types[@campaign.post_type]), {}, { :class => 'form-control type-of-post double-arrow-select-icon', :id => 'post_type' } %>
                 </div>
               </div>
 
