- Company name made unique in database - Email format validation added in sign up modal - In Contact Us > Name: Only String are allowed

--- a/app/views/shared/_footer_home_page.html.erb
+++ b/app/views/shared/_footer_home_page.html.erb
@@ -9,7 +9,7 @@
             <div class="row">
               <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="form-group">
-                  <input type="text" class="form-control" name="full_name" placeholder="Full Name" data-parsley-required="true"/>
+                  <input type="text" class="form-control" name="full_name" placeholder="Full Name" data-parsley-pattern="/^[A-Za-z\s]+$/" data-parsley-required="true"/>
                 </div>
               </div>
             </div>
