--- a/app/views/shared/_sign_in_form.html.erb
+++ b/app/views/shared/_sign_in_form.html.erb
@@ -20,7 +20,7 @@
         <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
         <div class="input_container">
           <div class="label_l">Email</div>
-          <input data-parsley-id="6021" class="login_input" data-parsley-required="true" data-parsley-error-message="Email is required" data-parsley-trigger="change" name="user[email]" id="user_email" type="text">
+          <input data-parsley-id="6021" class="login_input" data-parsley-type="email" data-parsley-required="true" data-parsley-error-message="Email is required" data-parsley-trigger="change" name="user[email]" id="user_email" type="text">
           <ul id="parsley-id-6021" class="parsley-errors-list"></ul>
         </div>
         <div class="input_container">
