--- a/app/views/shared/_sign_up_modal.html.erb
+++ b/app/views/shared/_sign_up_modal.html.erb
@@ -46,7 +46,7 @@
 
               <div class="input_container">
                 <div class="label_l">Email</div>
-                <input data-parsley-id="6021" class="login_input" data-parsley-required="true" data-parsley-trigger="change" name="user[email]" id="user_email" type="text">
+                <input data-parsley-id="6021" class="login_input" data-parsley-required="true" data-parsley-type="email" data-parsley-trigger="change" name="user[email]" id="user_email" type="text">
                 <ul id="parsley-id-6021" class="parsley-errors-list"></ul>
               </div>
 
