- Login form partially completed

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -903,7 +903,7 @@ th {
 }
 
 #company-short-bio {
- padding: 5px;
+  padding: 5px;
 }
 
 #signup .modal-dialog {
@@ -1414,8 +1414,8 @@ a .offer-box:last-child{
 
   @media (max-width: 767px){
     padding-top: 0;
-//    comment for making fixed navbar for all device
-//    margin-top: 30px;
+    //    comment for making fixed navbar for all device
+    //    margin-top: 30px;
     h2{
       font-size: 16px;
     }
@@ -1938,10 +1938,13 @@ div.modal-content{
     width: 100%;
     &__aside{
       width: 42%;
+      background-color: #00ADEF;
+      display: inline-block;
     }
 
     &__content{
       width: 58%;
+      display: inline-block;
     }
   }
 
@@ -1950,9 +1953,28 @@ div.modal-content{
 }
 
 .btn-modal{
-  border: 2px solid #00C9F3;
-  border-radius: 50%;
-  padding: 28px;
+  border: 2px solid #00ADEF;
+  border-radius: 18px;
+  padding: 5px 30px;
   text-align: center;
+  background-color: white;
+}
+
+.influencer-login-modal-aside {
+  padding: 60px 40px 50px;
+
+  &-description {
+    color: white;
+    font-size: 14px;
+    padding-top: 40px;
+  }
+}
+
+.influencer-login-modal-content{
+  width: 57%;
+
+  &-description {
+    padding: 25px 20px;
+  }
 }
 
