--- a/app/views/shared/_sign_in_modal.html.erb
+++ b/app/views/shared/_sign_in_modal.html.erb
@@ -4,13 +4,12 @@
   <div class="modal-backdrop fade in"></div>
   <div class="modal-dialog modal-md modal-dialog-sign-in">
     <div class="modal-content">
-      <div class="modal-header">
-        <button area-label="Close" class="close sign-in-close first_close" data-dismiss="modal" tyle="button">
-          &times;
-        </button>
-        <h3 class="modal-title">Sign In</h3>
-      </div>
-      <%= render 'shared/sign_in_form' %>
+
+      <% if params[:action] == 'home' %>
+          <%= render 'shared/influencer_log_in_form' %>
+      <% else %>
+
+      <% end %>
     </div>
   </div>
 </div>
