--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1958,6 +1958,7 @@ div.modal-content{
   padding: 5px 30px;
   text-align: center;
   background-color: white;
+  color: #00ADEF;
 }
 
 .influencer-login-modal-aside {
@@ -1974,7 +1975,20 @@ div.modal-content{
   width: 57%;
 
   &-description {
-    padding: 25px 20px;
+    padding: 45px 20px;
   }
 }
 
+.new-modal-input {
+  border: none;
+  border-bottom: 2px solid #00ADEF;
+}
+
+#new-modal-close {
+  color: #d9d9d9;
+  font-size: 3em;
+  opacity: 1.5;
+  font-weight: 100;
+  margin-top: 10px;
+  margin-right: 15px;
+}
