--- a/app/views/shared/_influencer_log_in_form.html.erb
+++ b/app/views/shared/_influencer_log_in_form.html.erb
@@ -8,7 +8,7 @@
 </div>
 
 <div class="brand-new-modal-body__content influencer-login-modal-content">
-  <button area-label="Close" class="close" data-dismiss="modal" type="button">&times;</button>
+  <button area-label="Close" class="close" id="new-modal-close" data-dismiss="modal" type="button">&times;</button>
   <div class="influencer-login-modal-content-description">
     <h4>FOR BRANDS</h4>
 
@@ -18,16 +18,17 @@
     <% end %>
     <form class="show-spinner-on-submit" method="post" accept-charset="UTF-8" action="/users/sign_in" data-remote="<%= params[:controller] == 'public' %>" data-parsley-validate="">
       <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+
       <div class="input_container">
-        <div class="label_l">Email</div>
-        <input data-parsley-id="6021" class="login_input" data-parsley-type="email" data-parsley-required="true" data-parsley-error-message="Email is required" data-parsley-trigger="change" name="user[email]" id="user_email" type="text">
+        <input data-parsley-id="6021" class="new-modal-input" placeholder="Email" data-parsley-type="email" data-parsley-required="true" data-parsley-error-message="Email is required" data-parsley-trigger="change" name="user[email]" id="user_email" type="text">
         <ul id="parsley-id-6021" class="parsley-errors-list"></ul>
       </div>
+
       <div class="input_container">
-        <div class="label_l">Password</div>
-        <input data-parsley-id="6194" class="login_input" data-parsley-required="true" data-parsley-error-message="Password is required" data-parsley-trigger="change" name="user[password]" id="user_password" type="password">
+        <input data-parsley-id="6194" class="new-modal-input" placeholder="Password" data-parsley-required="true" data-parsley-error-message="Password is required" data-parsley-trigger="change" name="user[password]" id="user_password" type="password">
         <ul id="parsley-id-6194" class="parsley-errors-list"></ul>
       </div>
+
       <button class="btn-modal" type="submit">
         Login
       </button>
