--- a/app/views/shared/_influencer_log_in_form.html.erb
+++ b/app/views/shared/_influencer_log_in_form.html.erb
@@ -1,15 +1,15 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-<div class="brand-new-modal-body__aside influencer-login-modal-aside">
+<div class="new-modal-body__aside">
   <a href="#"><%= image_tag('logo_white.svg', :class => 'img-responsive login-modal-logo', :alt => 'logo') %></a>
-  <div class="influencer-login-modal-aside-description">
+  <div class="login-modal-aside-description">
     Joining Brand Reach puts you in front of influencers from top industries that are searching to connect with brands like you.
   </div>
 </div>
 
-<div class="brand-new-modal-body__content influencer-login-modal-content">
+<div class="new-modal-body__content brand-login-modal-content">
   <button area-label="Close" class="close" id="new-modal-close" data-dismiss="modal" type="button">&times;</button>
-  <div class="influencer-login-modal-content-description">
+  <div class="brand-login-modal-content-description">
     <h4>FOR BRANDS</h4>
 
     <% if params[:controller] == 'public' %>
