--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1980,6 +1980,11 @@ div.modal-content{
   }
 }
 
+.login-sign-up-ul {
+  padding-left: 0;
+  font-size: 15px;
+}
+
 .new-modal-input {
   border: none;
   border-bottom: 2px solid #00ADEF;
