--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1928,13 +1928,22 @@ div.modal-content{
 
 // new provided design 19/2/2016
 .new-modal{
+
   &-content{
     overflow: hidden;
   }
 
   & &-dialog{
-    width: 68%;
+    width: 50%;
     margin: 30px auto;
+
+    @media (max-width: 1024px) {
+      width: 75%;
+    }
+
+    @media (max-width: 767px) {
+      width: 95%;
+    }
   }
 
   &-header{
@@ -1942,31 +1951,46 @@ div.modal-content{
 
   &-body{
     width: 100%;
+
     &__aside{
       background-color: #00adef;
       bottom: 0;
       color: white;
       float: left;
-      font-size: 14px;
-      padding: 45px 20px;
+      font-size: 15px;
+      padding: 70px 55px;
       position: absolute;
       top: 0;
       width: 42%;
 
-      @media (max-width: 500px) {
-        display: none;
+      @media (max-width: 1024px) {
+        padding: 70px 35px;
+      }
+
+      @media (max-width: 767px) {
+        width: 100%;
+        bottom: auto;
+        padding: 20px 30px;
+      }
+
+      .login-modal-logo {
+        width: 160px;
       }
 
     }
 
     &__content{
       width: 58%;
-      padding: 45px 20px;
+      padding: 45px 30px;
       margin-left: 42%;
 
-      @media (max-width: 500px) {
+      @media (max-width: 767px) {
         width: 100%;
+        margin-top: 15%;
         margin-left: 0;
+        .forgot-password-link {
+          padding-top: 10px;
+        }
       }
     }
   }
@@ -1978,47 +2002,54 @@ div.modal-content{
 .btn-modal{
   border: 2px solid #00ADEF;
   border-radius: 18px;
-  padding: 5px 30px;
+  padding: 4px 28px;
   text-align: center;
   background-color: white;
   color: #00ADEF;
+  margin-top: 20px;
+  margin-right: 15px;
+
+  @media (max-width: 767px) {
+    width: 100%;
+  }
 }
 
-//.login-modal-aside {
-//
-//  &-description {
-//    color: white;
-//    font-size: 14px;
-//    padding-top: 40px;
-//  }
-//
-//}
-//
-//.brand-login-modal-content{
-//  width: 57%;
-//
-//  &-description {
-//    padding: 45px 20px;
-//  }
-//}
-//
-//.login-sign-up-ul {
-//  padding-left: 0;
-//  font-size: 15px;
-//}
-//
+.login-modal-aside {
+
+  &-description {
+    color: white;
+    font-size: 14px;
+    padding-top: 40px;
+    font-family: "Raleway", sans-serif;
+    @media (max-width: 767px) {
+      display: none;
+    }
+  }
+
+}
+
+.login-sign-up-ul {
+  padding-left: 0;
+  font-size: 15px;
+}
+
 .new-modal-input {
   border: none;
   border-bottom: 2px solid #00ADEF;
+  width: 100%;
+
+  &:focus {
+    outline: none;
+  }
 }
-//
-//#new-modal-close {
-//  color: #d9d9d9;
-//  font-size: 3em;
-//  opacity: 1.5;
-//  font-weight: 100;
-//  margin-top: 10px;
-//  margin-right: 15px;
-//}
+
+#new-modal-close {
+  color: #d9d9d9;
+  font-size: 3em;
+  opacity: 1.5;
+  font-weight: 100;
+  margin-top: -35px;
+  margin-right: -10px;
+}
 
 
