--- a/app/views/shared/_influencer_log_in_form.html.erb
+++ b/app/views/shared/_influencer_log_in_form.html.erb
@@ -5,10 +5,11 @@
   <div class="login-modal-aside-description">
     Joining Brand Reach puts you in front of influencers from top industries that are searching to connect with brands like you.
   </div>
+  <button area-label="Close" class="close new-modal-close display-none" id="new-modal-close-responsive" data-dismiss="modal" type="button">&times;</button>
 </div>
 
 <div class="new-modal-body__content brand-login-modal-content">
-  <button area-label="Close" class="close" id="new-modal-close" data-dismiss="modal" type="button">&times;</button>
+  <button area-label="Close" class="close new-modal-close" id="new-modal-close-button" data-dismiss="modal" type="button">&times;</button>
   <div class="brand-login-modal-content-description">
     <h4>FOR BRANDS</h4>
 
