Brand > Explore: Change Title  View Profile to View Page

--- a/app/views/explores/_explores.erb
+++ b/app/views/explores/_explores.erb
@@ -29,7 +29,7 @@
                     Likes: &nbsp;<%= account.number_of_followers %>
                   </p>
                 </div>
-                <%= link_to 'VIEW PROFILE', influencer_path(account), remote: true, :class => 'btn btn-primary btn-view-profile' %>
+                <%= link_to 'View Page', influencer_path(account), remote: true, :class => 'btn btn-primary btn-view-profile' %>
               </div>
             </div>
         <% end %>
