implement new explore page design -need to implement backend functionality with new post_type filtering

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -2052,4 +2052,12 @@ div.modal-content{
   margin-right: -10px;
 }
 
+.social-media-select{
+  padding-top: 38px;
+  
+  @media (max-width: 991px) {
+    padding-top: 0;
+  }
+}
+
 
