--- a/app/views/explores/show.js.erb
+++ b/app/views/explores/show.js.erb
@@ -1,1 +1,1 @@
-$('#search-result-container').html("<%= escape_javascript (render 'explores/explores', { influencers: @influencers }) %>");
+$('#search-result-container').html("<%= escape_javascript (render 'explores/explores', {accounts: @accounts}) %>");
